@@ -32,7 +32,6 @@ import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -63,10 +62,10 @@ public class AssignmentInfo {
                           final int commonlySupportedVersion) {
         this(version,
              commonlySupportedVersion,
-             Collections.emptyList(),
-             Collections.emptyMap(),
-             Collections.emptyMap(),
-             Collections.emptyMap(),
+             List.of(),
+             Map.of(),
+             Map.of(),
+             Map.of(),
              0);
     }
 
